--- a/Backend/package.json
+++ b/Backend/package.json
@@ -10,6 +10,8 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@google/genai": "^1.40.0",
+    "@pinecone-database/pinecone": "^7.0.0",
     "bcryptjs": "^3.0.3",
     "cookie": "^1.1.1",
     "cookie-parser": "^1.4.7",
